@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-05-22T16:15:31Z",
-  "count_outdated" : 281,
-  "uniques_outdated" : 144,
-  "count" : 326,
-  "uniques" : 174,
+  "timestamp" : "2022-05-23T00:56:17Z",
+  "count_outdated" : 290,
+  "uniques_outdated" : 150,
+  "count" : 328,
+  "uniques" : 175,
   "clones" : [
-    {
-      "timestamp": "2022-05-08T00:00:00Z",
-      "count": 7,
-      "count_minmax": [ 7, 9 ],
-      "uniques": 5,
-      "uniques_minmax": [ 5, 6 ]
-    },
     {
       "timestamp": "2022-05-09T00:00:00Z",
       "count": 2,
