@@ -1,12 +1,7 @@
 {
-  "count": 45,
-  "uniques": 14,
+  "count": 38,
+  "uniques": 12,
   "clones": [
-    {
-      "timestamp": "2022-05-08T00:00:00Z",
-      "count": 7,
-      "uniques": 5
-    },
     {
       "timestamp": "2022-05-09T00:00:00Z",
       "count": 2,
